# fcitx5-android-bn

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/java/org/fcitx/fcitx5/android/data/avro/: AvroDictManager.kt
app/src/main/java/org/fcitx/fcitx5/android/input/keyboard/: KeyboardWindow.kt
app/src/main/java/org/fcitx/fcitx5/android/input/keyboard/bn/: BanglaAvroKeyboard.kt  BengaliCommitKey.kt  ProbhatKeyboard.kt
app/src/main/java/org/fcitx/fcitx5/android/ui/main/settings/: AvroDictionaryFragment.kt  SettingsRoute.kt
app/src/main/java/org/fcitx/fcitx5/android/ui/main/settings/im/: InputMethodConfigFragment.kt
app/src/main/res/values/: strings.xml
plugin/avro/: build.gradle.kts  org.fcitx.fcitx5.android.yml  proguard-rules.pro
plugin/avro/src/main/cpp/: CMakeLists.txt  avro-addon.conf.in.in  avro.conf.in  avro.cpp  avro.h  avro_parser.h  probhat.conf.in  probhat_keymap.h
plugin/avro/src/main/java/org/fcitx/fcitx5/android/plugin/avro/: AvroDotKeyCycle.kt  AvroKeyboardIds.kt
plugin/avro/src/main/res/values/: strings.xml
plugin/avro/src/main/res/xml/: plugin.xml
plugin/bangla/: build.gradle.kts  org.fcitx.fcitx5.android.yml  proguard-rules.pro
plugin/bangla/src/main/cpp/: CMakeLists.txt  avro.conf.in  bangla-addon.conf.in.in  probhat.conf.in  probhat_keymap.h
plugin/bangla/src/main/java/org/fcitx/fcitx5/android/plugin/bangla/: AvroDotKeyCycle.kt  AvroKeyboardIds.kt
plugin/bangla/src/main/res/values/: strings.xml
plugin/bangla/src/main/res/xml/: plugin.xml
plugin/bangla/tools/: host_golden_test.cpp
